--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container post">
         <div class="row">
             <div class="col-md-6 post-title">
-                <h1 data-bs-hover-animate="rubberBand">Huo in New York</h1>
+                <h1 data-bs-hover-animate="rubberBand">HuoYingHui in New York</h1>
                 <p class="author"><strong>John Steward</strong> <span class="text-muted">October 6th 2015 </span></p>
             </div>
             <div class="col-md-6 col-md-offset-0 post-body">
