--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
                 <p class="author"><strong>John Steward</strong> <span class="text-muted">October 6th 2015 </span></p>
             </div>
             <div class="col-md-6 col-md-offset-0 post-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sem quam, scelerisque vitae sem non, ornare condimentum leo. Vivamus eros tortor, tincidunt et viverra ac, gravida eu augue. Interdum et malesuada fames ac ante ipsum primis
-                    in faucibus. Praesent nibh ex, hendrerit at tellus sed, laoreet suscipit leo. </p>
-                <p>Curabitur cursus ac quam sit amet mattis. Donec lacinia massa id libero tincidunt, sed ultricies magna eleifend. Integer porta consectetur ipsum sed porttitor. Praesent sed convallis nisi. Mauris eget commodo sem. Sed auctor commodo quam
-                    eu semper. </p>
-                <p>Sed mollis, urna eu tempus facilisis, diam tellus aliquam tortor, et vestibulum ante quam non justo. Nullam luctus rutrum mattis. Maecenas in pharetra mi, vel mollis odio. </p>
+                <p>Sittin' here, breathing deeply, fucking ready to go <br>Been standing here blankly for an hour, can't say goodbye or hello <br>It's like solitary confinement, just need someone to hold <br>I'm not as brave as I'm portrayed, I need to be
+                    told to be bold <br>Comin' in hot, I'm alone, no support <br>Packed my bags, said hello to the airport <br>I hope they board up my room and keep it empty <br>Because fillin' my space ain't that damn easy <br>My frontier awaits, I'm
+                    a soldier trecking solo <br>Leaving all the past shit down below <br>Movin' out, I've grown from a seed to&nbsp;</p>
+                <p>坐在这里,深呼吸,我他妈的准备好了<br>面无表情的站在这里一个小时，既没有再见也没有你好<br>这就像独居监禁，只是需要有人约束<br>我并不像我所描绘的那样勇敢，我需要被鼓励要做一个勇敢的人<br>即将到来的激情，我独自一人却没人支撑<br>收拾我的行李，向机场问好<br>我希望他们用木板围住我的空房间<br>因为弥补我的空虚是那么该死的不容易<br>我在边域之城等待着， 我是独行的艰苦战士<br>让所有的过去随风而逝<br>发芽，我从一颗种子长成参天大树<br>我会想念我的朋友和我的家人</p>
                 <figure><img class="img-thumbnail" src="assets/img/camera_illustration.jpg">
                     <figcaption>Praesent sed convallis nisi </figcaption>
                 </figure>
