--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="container post">
         <div class="row">
             <div class="col-md-6 post-title">
-                <h1 data-bs-hover-animate="rubberBand">HuoYingHui in New York</h1>
-                <p class="author"><strong>John Steward</strong> <span class="text-muted">October 6th 2015 </span></p>
+                <h1 data-bs-hover-animate="rubberBand">Sketch&nbsp;Pane</h1>
+                <p class="author"><strong>Cam Kelley</strong>&nbsp;<span class="text-muted">October 6th 2015 </span></p>
             </div>
             <div class="col-md-6 col-md-offset-0 post-body">
                 <p>Sittin' here, breathing deeply, fucking ready to go <br>Been standing here blankly for an hour, can't say goodbye or hello <br>It's like solitary confinement, just need someone to hold <br>I'm not as brave as I'm portrayed, I need to be
