--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <div
                     class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active" role="presentation"><a href="#">Sign in</a></li>
-                        <li role="presentation"><a href="#">Sign up</a></li>
-                        <li role="presentation"><a href="#">Contact me</a></li>
+                        <li class="active" role="presentation"><a href="https://github.com/login">Sign in</a></li>
+                        <li role="presentation"><a href="https://github.com/join">Sign up</a></li>
+                        <li role="presentation"><a href="https://huoyinghui.github.io/">Contact me</a></li>
                     </ul>
             </div>
             </div>
