--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-default">
             <div class="container">
-                <div class="navbar-header"><a class="navbar-brand" href="#"><i class="glyphicon glyphicon-camera"></i><span class="text-title">ENJOY LIFE Blog </span></a><button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
+                <div class="navbar-header"><a class="navbar-brand" href="#"><i class="glyphicon glyphicon-camera"></i><span class="text-title">my lIFE</span></a><button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
                 <div
                     class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
