--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>web</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/css/user.css">
+    <link rel="stylesheet" href="assets/css/Header-Dark.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="assets/css/Navigation-Menu.css">
 </head>
 
 <body>
@@ -28,11 +31,11 @@
         </nav>
     </header>
     <ul class="nav nav-pills categories">
-        <li class="active"><a href="#">Landscape </a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Page</a></li>
-        <li><a href="#">Locations </a></li>
-        <li><a href="#">Techniques </a></li>
+        <li class="active"><a href="#">F Music</a></li>
+        <li><a href="docs.html" target="_blank">News</a></li>
+        <li><a href="#">Docs</a></li>
+        <li><a href="#">Python</a></li>
+        <li><a href="#">Web</a></li>
     </ul>
     <div class="container post">
         <div class="row">
