--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <ul class="nav nav-pills categories">
-        <li class="active"><a href="#">F Music</a></li>
+        <li class="active"><a href="https://www.youtube.com/watch?v=Lndp_X-nar4">F Music</a></li>
         <li><a href="docs.html" target="_blank">News</a></li>
         <li><a href="#">Docs</a></li>
         <li><a href="#">Python</a></li>
@@ -39,7 +39,7 @@
     <div class="container post">
         <div class="row"></div>
     </div>
-    <footer>
+    <footer class="navbar-fixed-bottom">
         <h5>Photography Blog © 2016</h5>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
