--- a/docs.html
+++ b/docs.html
@@ -18,19 +18,10 @@
         <div class="header-dark">
             <nav class="navbar navbar-default navigation-clean-search">
                 <div class="container">
-                    <div class="navbar-header"><a class="navbar-brand" href="#">Company Name</a><button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
+                    <div class="navbar-header"><a class="navbar-brand" href="#">HuoCompany</a><button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
                     <div
                         class="collapse navbar-collapse" id="navcol-1">
-                        <ul class="nav navbar-nav">
-                            <li role="presentation"><a href="#">Link</a></li>
-                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Dropdown <span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li role="presentation"><a href="#">First Item</a></li>
-                                    <li role="presentation"><a href="#">Second Item</a></li>
-                                    <li role="presentation"><a href="#">Third Item</a></li>
-                                </ul>
-                            </li>
-                        </ul>
+                        <ul class="nav navbar-nav"></ul>
                         <form class="navbar-form navbar-left" target="_self">
                             <div class="form-group"><label class="control-label" for="search-field"><i class="glyphicon glyphicon-search"></i></label><input class="form-control search-field" type="search" name="search" id="search-field"></div>
                         </form>
