--- a/index.html
+++ b/index.html
@@ -7,40 +7,74 @@
     <title>web</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/css/user.css">
     <link rel="stylesheet" href="assets/css/Header-Dark.css">
     <link rel="stylesheet" href="assets/css/Navigation-Menu.css">
+    <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
+    <link rel="stylesheet" href="assets/css/Team-Grid.css">
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header"><a class="navbar-brand" href="#"><i class="glyphicon glyphicon-camera"></i><span class="text-title">my lIFE</span></a><button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
-                <div
-                    class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active" role="presentation"><a href="https://github.com/login">Sign in</a></li>
-                        <li role="presentation"><a href="https://github.com/join">Sign up</a></li>
-                        <li role="presentation"><a href="https://huoyinghui.github.io/">Contact me</a></li>
-                    </ul>
-            </div>
-            </div>
-        </nav>
-    </header>
     <ul class="nav nav-pills categories">
-        <li class="active"><a href="https://www.youtube.com/watch?v=Lndp_X-nar4">F Music</a></li>
-        <li><a href="docs.html" target="_blank">News</a></li>
-        <li><a href="#">Docs</a></li>
-        <li><a href="#">Python</a></li>
-        <li><a href="#">Web</a></li>
+        <li class="active navbar-left"><a href="https://www.youtube.com/watch?v=Lndp_X-nar4"><strong>Families</strong></a></li>
+        <li class="navbar-left"><a href="docs.html" target="_blank">News</a></li>
+        <li class="navbar-left"><a href="#">Projects</a></li>
+        <li class="navbar-left"><a href="#">Docs</a></li>
+        <li class="navbar-left"><a href="#">Python</a></li>
+        <li class="navbar-left"><a href="#">Web</a></li>
+        <li class="navbar-right"><a href="#">Logout</a></li>
+        <li class="navbar-right"><a href="#">Login</a></li>
     </ul>
-    <div class="container post">
-        <div class="row"></div>
+    <div class="team-grid">
+        <div class="container">
+            <div class="intro">
+                <h2 class="text-center">Families</h2>
+                <p class="text-center">Tes is a web programming team.<br>We create value for what we like, programming like art.</p>
+            </div>
+            <div class="row people">
+                <div class="col-md-3 col-sm-4 item">
+                    <div class="box" style="background-image:url(assets/img/1.jpg)">
+                        <div class="cover">
+                            <h3 class="name">Ben Johnson</h3>
+                            <p class="title">Musician</p>
+                            <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 item">
+                    <div class="box" style="background-image:url(assets/img/2.jpg)">
+                        <div class="cover">
+                            <h3 class="name">Emily Clark</h3>
+                            <p class="title">Artist </p>
+                            <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 item">
+                    <div class="box" style="background-image:url(assets/img/3.jpg)">
+                        <div class="cover">
+                            <h3 class="name">Carl Kent</h3>
+                            <p class="title">Stylist </p>
+                            <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 item">
+                    <div class="box" style="background-image:url(assets/img/4.jpg)">
+                        <div class="cover">
+                            <h3 class="name">Felicia Adams</h3>
+                            <p class="title">Model </p>
+                            <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer class="navbar-fixed-bottom">
-        <h5>Photography Blog © 2016</h5>
+        <h5>Tes Family Blog © 2018</h5>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
