--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <li class="navbar-left"><a href="#">Docs</a></li>
         <li class="navbar-left"><a href="#">Python</a></li>
         <li class="navbar-left"><a href="#">Web</a></li>
-        <li class="navbar-right"><a href="#">Logout</a></li>
-        <li class="navbar-right"><a href="#">Login</a></li>
+        <li class="navbar-right"><a href="https://github.com/logout">Logout</a></li>
+        <li class="navbar-right"><a href="https://github.com/login">Login</a></li>
     </ul>
     <div class="team-grid">
         <div class="container">
