--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="col-md-3 col-sm-4 item">
                     <div class="box" style="background-image:url(assets/img/2.jpg)">
                         <div class="cover">
-                            <h3 class="name">Emily Clark</h3>
+                            <h3 class="name">TuoPan</h3>
                             <p class="title">Artist <img src="tp.jpg"></p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
@@ -54,8 +54,8 @@
                 </div>
                 <div class="col-md-3 col-sm-4 item">
                     <div class="box" style="background-image:url(assets/img/3.jpg)">
-                        <div class="cover">
-                            <h3 class="name">Carl Kent</h3>
+                        <div class="cover"><img src="assets/img/5.jpg">
+                            <h3 class="name">HuoYingHui</h3>
                             <p class="title">Stylist </p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
