--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
     </div>
     <footer class="navbar-fixed-bottom">
-        <h5>Tes Family Blog © 2018</h5>
+        <h5>Tes Families Blog © 2018</h5>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
