--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 </div>
                 <div class="col-md-3 col-sm-4 item">
                     <div class="box" style="background-image:url(assets/img/3.jpg)">
-                        <div class="cover"><img src="assets/img/5.jpg">
-                            <h3 class="name">HuoYingHui</h3>
+                        <div class="cover">
+                            <h3 class="name">Huo</h3>
                             <p class="title">Stylist </p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
