--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="box" style="background-image:url(assets/img/2.jpg)">
                         <div class="cover">
                             <h3 class="name">TuoPan</h3>
-                            <p class="title">Artist <img src="tp.jpg"></p>
+                            <p class="title">Artist </p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
