--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body>
     <ul class="nav nav-pills categories">
-        <li class="active navbar-left"><a href="https://www.youtube.com/watch?v=Lndp_X-nar4"><strong>Families</strong></a></li>
+        <li class="active navbar-left"><a href="https://www.youtube.com/watch?v=Lndp_X-nar4"><strong>home</strong></a></li>
         <li class="navbar-left"><a href="docs.html" target="_blank">News</a></li>
-        <li class="navbar-left"><a href="#">Projects</a></li>
+        <li class="navbar-left"><a href="projs.html">Projs</a></li>
         <li class="navbar-left"><a href="#">Docs</a></li>
         <li class="navbar-left"><a href="#">Python</a></li>
         <li class="navbar-left"><a href="#">Web</a></li>
