--- a/projs.html
+++ b/projs.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/user.css">
     <link rel="stylesheet" href="assets/css/Header-Dark.css">
     <link rel="stylesheet" href="assets/css/Navigation-Menu.css">
+    <link rel="stylesheet" href="assets/css/Projects-Clean.css">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
     <link rel="stylesheet" href="assets/css/Team-Grid.css">
 </head>
@@ -27,13 +28,31 @@
         <li class="navbar-right"><a href="https://github.com/logout">Logout</a></li>
         <li class="navbar-right"><a href="https://github.com/login">Login</a></li>
     </ul>
-    <div class="team-grid">
+    <div class="team-grid"></div>
+    <div class="projects-clean">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">Projs</h2>
-                <p class="text-center">Tes is a web programming team.<br>We create value for what we like, programming like art.</p>
+                <h2 class="text-center">Projects </h2>
+                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
             </div>
-            <div class="row people"></div>
+            <div class="row projects">
+                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/desk.jpg">
+                    <h3 class="name">Project Name</h3>
+                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                </div>
+                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/building.jpg">
+                    <h3 class="name">Project Name</h3>
+                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                </div>
+                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/loft.jpg">
+                    <h3 class="name">Project Name</h3>
+                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                </div>
+                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg">
+                    <h3 class="name">Project Name</h3>
+                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                </div>
+            </div>
         </div>
     </div>
     <footer class="navbar-fixed-bottom">
