--- a/soft_news.html
+++ b/soft_news.html
@@ -21,7 +21,7 @@
     <ul class="nav nav-pills categories">
         <li class="navbar-left"><a href="index.html">Home</a></li>
         <li class="active navbar-left"><a href="#"><strong>Projs</strong></a></li>
-        <li class="navbar-left"><a href="soft_news.html" target="_blank">News</a></li>
+        <li class="navbar-left"><a href="news.html" target="_blank">News</a></li>
         <li class="navbar-left"><a href="#">Docs</a></li>
         <li class="navbar-left"><a href="#">Python</a></li>
         <li class="navbar-left"><a href="#">Web</a></li>
