--- a/projs.html
+++ b/projs.html
@@ -68,6 +68,10 @@
                     <h3 class="name">vue/angular</h3>
                     <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
                 </div>
+                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg">
+                    <h3 class="name">Bootstraps</h3>
+                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                </div>
             </div>
         </div>
     </div>
