--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <div class="col-md-3 col-sm-4 item">
                     <div class="box" style="background-image:url(assets/img/2.jpg)">
                         <div class="cover">
-                            <h3 class="name">TuoPan</h3>
-                            <p class="title">Artist </p>
+                            <h3 class="name">Tp</h3>
+                            <p class="title">Algorithm designer </p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                     <div class="box" style="background-image:url(assets/img/3.jpg)">
                         <div class="cover">
                             <h3 class="name">Huo</h3>
-                            <p class="title">Stylist </p>
+                            <p class="title">Python software engineer </p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
