--- a/index.html
+++ b/index.html
@@ -38,17 +38,26 @@
                 <div class="col-md-3 col-sm-4 item">
                     <div class="box" style="background-image:url(assets/img/1.jpg)">
                         <div class="cover">
-                            <h3 class="name">Ben Johnson</h3>
-                            <p class="title">Musician</p>
+                            <h3 class="name">Yxin</h3>
+                            <p class="title">CTO</p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 item">
-                    <div class="box" style="background-image:url(assets/img/2.jpg)">
+                    <div class="box" style="background-image:url(assets/img/1.jpg)">
                         <div class="cover">
-                            <h3 class="name">Tp</h3>
-                            <p class="title">Algorithm designer </p>
+                            <h3 class="name">Hyz</h3>
+                            <p class="title">CTO</p>
+                            <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 item">
+                    <div class="box" style="background-image:url(assets/img/3.jpg)">
+                        <div class="cover">
+                            <h3 class="name">Wye</h3>
+                            <p class="title">cto</p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
@@ -63,10 +72,10 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 item">
-                    <div class="box" style="background-image:url(assets/img/4.jpg)">
+                    <div class="box" style="background-image:url(assets/img/2.jpg)">
                         <div class="cover">
-                            <h3 class="name">Felicia Adams</h3>
-                            <p class="title">Model </p>
+                            <h3 class="name">Tp</h3>
+                            <p class="title">Algorithm designer </p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
