--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="box" style="background-image:url(assets/img/3.jpg)">
                         <div class="cover">
                             <h3 class="name">Huo</h3>
-                            <p class="title">Python software engineer </p>
+                            <p class="title">cto</p>
                             <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
