--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                 <div class="col-md-3 col-sm-4 item">
                     <div class="box" style="background-image">
                         <div class="cover">
-                            <h3 class="name">Tp</h3>
-                            <p class="title">Algorithm designer </p>
+                            <h3 class="name">Waiting FU</h3>
                             <div class="social"><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
 <span class="sr-only">Loading...</span></div>
                     </div>
