--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="cover">
                             <h3 class="name">Huo</h3>
                             <p class="title">cto</p>
-                            <div class="social"><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                            <div class="social"><a href="https://huoyinghui.github.com.io"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                         <div class="cover">
                             <h3 class="name">Tp</h3>
                             <p class="title">Algorithm designer </p>
-                            <div class="social"><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                            <div class="social"><a href="https://github.com/tuopan"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
                 </div>
