--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/css/user.css">
     <link rel="stylesheet" href="assets/css/Header-Dark.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Navigation-Menu.css">
     <link rel="stylesheet" href="assets/css/Projects-Clean.css">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
@@ -35,7 +35,7 @@
                 <h2 class="text-center">Families</h2>
                 <p class="text-center">Tes is a web programming team.<br>We create value for what we like, programming like art.</p>
             </div>
-            <div class="row people">
+            <div class="row people" data-aos="fade" data-aos-delay="100" data-aos-once="true">
                 <div class="col-md-3 col-sm-4 item">
                     <div class="box" style="background-image:url(assets/img/1.jpg)">
                         <div class="cover">
@@ -83,7 +83,7 @@
                 </div>
                 <div class="col-md-3 col-sm-4 item">
                     <div class="box" style="background-image">
-                        <div data-bs-hover-animate="shake" class="cover">
+                        <div data-aos="fade" class="cover">
                             <h3 class="name">Join Us</h3>
                             <div class="social"><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
 <span class="sr-only">Loading...</span></div>
@@ -98,6 +98,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
 </body>
 
 </html>
