--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2 class="text-center">Families</h2>
                 <p class="text-center">Tes is a web programming team.<br>We create value for what we like, programming like art.</p>
             </div>
-            <div class="row people" data-aos="fade" data-aos-delay="100" data-aos-once="true">
+            <div class="row people">
                 <div class="col-md-3 col-sm-4 item">
                     <div class="box" style="background-image:url(assets/img/1.jpg)">
                         <div class="cover">
