--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li class="active navbar-left"><a href="https://www.youtube.com/watch?v=Lndp_X-nar4"><strong>home</strong></a></li>
         <li class="navbar-left"><a href="docs.html" target="_blank">News</a></li>
         <li class="navbar-left"><a href="projs.html">Projs</a></li>
-        <li class="navbar-left"><a href="#">Docs</a></li>
+        <li class="navbar-left"><a href="docs.html">Docs</a></li>
         <li class="navbar-left"><a href="#">Python</a></li>
         <li class="navbar-left"><a href="#">Web</a></li>
         <li class="navbar-right"><a href="https://github.com/logout">Logout</a></li>
