--- a/soft_news.html
+++ b/soft_news.html
@@ -69,6 +69,10 @@
                     <h3 class="name">vue/angular</h3>
                     <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
                 </div>
+                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg">
+                    <h3 class="name"><a href="https://kubernetes.io/">kubernetes</a></h3>
+                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                </div>
             </div>
         </div>
     </div>
