--- a/musics.html
+++ b/musics.html
@@ -26,9 +26,8 @@
         <li class="navbar-left"><a href="index.html">Home</a></li>
         <li class="navbar-left"><a href="#">Projs</a></li>
         <li class="navbar-left"><a href="soft_news.html" target="_blank">News</a></li>
-        <li class="active navbar-left"><a href="#"><strong>Docs</strong></a></li>
-        <li class="navbar-left"><a href="#">Python</a></li>
-        <li class="navbar-left"><a href="#">Web</a></li>
+        <li class="navbar-left"><a href="#">Docs</a></li>
+        <li class="active navbar-left"><a href="#"><strong>Musics</strong></a></li>
         <li class="navbar-right"><a href="https://github.com/logout">Logout</a></li>
         <li class="navbar-right"><a href="https://github.com/login">Login</a></li>
     </ul>
