--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <body>
     <ul class="nav nav-pills categories">
         <li class="active navbar-left"><a href="#"><strong>Home</strong></a></li>
-        <li class="navbar-left"><a href="#">Projs</a></li>
+        <li class="navbar-left"><a href="projs.html">Projs</a></li>
         <li class="navbar-left"><a href="soft_news.html" target="_blank">News</a></li>
-        <li class="navbar-left"><a href="#">Docs</a></li>
-        <li class="navbar-left"><a href="index.html">Muscis</a></li>
+        <li class="navbar-left"><a href="#" class="docs.html">Docs</a></li>
+        <li class="navbar-left"><a href="musics.html">Muscis</a></li>
         <li class="navbar-right"><a href="https://github.com/logout">Logout</a></li>
         <li class="navbar-right"><a href="https://github.com/login">Login</a></li>
     </ul>
