--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="cover">
                             <h3 class="name">Yxin</h3>
                             <p class="title">CTO</p>
-                            <div class="social"><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                            <div class="social"><a href="https://www.jianshu.com/u/763c499f4b6a"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
                 </div>
