--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
                 <div class="col-md-3 col-sm-4 item">
                     <div class="box" style="background-image:url(assets/img/3.jpg)">
                         <div class="cover">
+                            <h3 class="name">Yk</h3>
+                            <p class="title">cto</p>
+                            <div class="social"><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 item">
+                    <div class="box" style="background-image:url(assets/img/3.jpg)">
+                        <div class="cover">
                             <h3 class="name">Huo</h3>
                             <p class="title">cto</p>
                             <div class="social"><a href="https://huoyinghui.github.io"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
