--- a/projs.html
+++ b/projs.html
@@ -90,6 +90,9 @@
                 <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg"><a href='https://www.jianshu.com/p/5600af9ff238'><h3 class="name">Nginx</h3></a>
                     <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
                 </div>
+                <div class="col-lg-4 col-sm-6 item"><img class="img-responsive" src="assets/img/minibus.jpeg"><a href='https://sentry.io/welcome/'><h3 class="name">sentry</h3></a>
+                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                </div>
             </div>
         </div>
     </div>
