--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class="cover">
                             <h3 class="name">Ykun</h3>
                             <p class="title">cto</p>
-                            <div class="social"><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                            <div class="social"><a href="https://github.com/YangkunKnight"><i class="fa fa-github" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                         </div>
                     </div>
                 </div>
